set WebMouseEvent.button for mousemove on mac.

Previously, NSMouseMoved & NSMouseEntered event
button is kNoButton. For mousemove event from
NSLeft/Right/OtherDragged, button is set.

However stylus move with middle button down is a
NSMouseMoved event. button is incorrect.

To be consistent with win/android, set NSMouseMoved
event button from pressMouseButtons.

Bug: 762095
Change-Id: Ia25860ae528fd670987352fe1d3dd54bb7bb8dfa
Reviewed-on: https://chromium-review.googlesource.com/650834
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Dave Tapuska <dtapuska@chromium.org>
Cr-Commit-Position: refs/heads/master@{#499949}
Former-commit-id: f2599af5fcfd243b31308fa5542d466216458edb