content/browser/renderer_host/input/web_input_event_builders_mac.mm
@@ -195,6 +195,18 @@ ui::DomKey DomKeyFromEvent(NSEvent* event) {
   return ui::DomKey::UNIDENTIFIED;
 }
 
+blink::WebMouseEvent::Button ButtonFromPressedMouseButtons() {
+  NSUInteger pressed_buttons = [NSEvent pressedMouseButtons];
+
+  if (pressed_buttons & (1 << 0))
+    return blink::WebMouseEvent::Button::kLeft;
+  if (pressed_buttons & (1 << 1))
+    return blink::WebMouseEvent::Button::kRight;
+  if (pressed_buttons & (1 << 2))
+    return blink::WebMouseEvent::Button::kMiddle;
+  return blink::WebMouseEvent::Button::kNoButton;
+}
+
 }  // namespace
 
 blink::WebKeyboardEvent WebKeyboardEventBuilder::Build(NSEvent* event) {
@@ -296,6 +308,7 @@ blink::WebMouseEvent WebMouseEventBuilder::Build(
     case NSMouseMoved:
     case NSMouseEntered:
       event_type = blink::WebInputEvent::kMouseMove;
+      button = ButtonFromPressedMouseButtons();
       break;
     case NSLeftMouseDragged:
       event_type = blink::WebInputEvent::kMouseMove;
